force-app/main/default/objects/Ethics_Request__c/fields/I_RS_AEC_Ethics_Application_Type__c.field-meta.xml
<CustomField>
    <fullName>I_RS_AEC_Ethics_Application_Type__c</fullName>
    <inlineHelpText>Choose one or more of the potential benefits of the research project. These are used for reporting to the regulator.  If you aren’t sure, the Research Office will populate this field.</inlineHelpText>
    <label>AEC Ethics Application Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>The understanding of human or animal biology</fullName>
            </value>
            <value>
                <fullName>Maintenance and improvement of human or animal health and welfare</fullName>
            </value>
            <value>
                <fullName>Improvement of animal management or production</fullName>
            </value>
            <value>
                <fullName>The achievement of educational objectives</fullName>
            </value>
            <value>
                <fullName>Obtain &amp; establish significant information relevant to the understanding, maintenance or improvement of the natural environment.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>