force-app/main/default/objects/Ethics_Request__c/fields/I_RS_Age__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Age__c</fullName>
    <formula>TEXT(

IF(
AND(
TEXT(I_RS_Status__c) &lt;&gt; &quot;Workflow Complete&quot;, 
TEXT(I_RS_Status__c) &lt;&gt; &quot;With Customer&quot;,
ISBLANK(I_RS_Closed_Date__c), 
ISBLANK(I_RS_With_Researcher_Date__c )
), 
TODAY() - DATEVALUE(CreatedDate),

IF(
TEXT(I_RS_Status__c) = &quot;With Customer&quot;,
 I_RS_With_Researcher_Date__c - DATEVALUE(CreatedDate),

IF( 
TEXT(I_RS_Status__c) = &quot;Closed&quot;, 
I_RS_Closed_Date__c - DATEVALUE(CreatedDate) - (I_RS_With_Ethics_Team_Date__c - I_RS_With_Researcher_Date__c),

TODAY() - DATEVALUE(CreatedDate) - (I_RS_With_Ethics_Team_Date__c - I_RS_With_Researcher_Date__c))))
)

&amp;&quot; &quot;&amp;&quot;days&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <type>Text</type>
</CustomField>