force-app/main/default/objects/Ethics_Request__c/fields/I_RS_Approval_Date_Day_of_Month__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Approval_Date_Day_of_Month__c</fullName>
    <formula>IF (

RecordType.DeveloperName &lt;&gt; &apos;Research_Governance_Authorisation&apos;,

DAY(I_RS_Ethics_Application_Approval_Date__c),

DAY(I_RS_Approving_Ethics_Committee_Approval__c)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Date Day of Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>