force-app/main/default/objects/Ethics_Request__c/fields/I_RS_Approval_Date_Month_of_Year__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Approval_Date_Month_of_Year__c</fullName>
    <formula>IF (RecordType.DeveloperName &lt;&gt; &apos;Research_Governance_Authorisation&apos;,

MONTH( I_RS_Ethics_Application_Approval_Date__c ),

MONTH ( I_RS_Approving_Ethics_Committee_Approval__c )

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Date Month of Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>