force-app/main/default/objects/Ethics_Request__c/fields/I_RS_Approving_Ethics_Committee_Approval__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Approving_Ethics_Committee_Approval__c</fullName>
    <inlineHelpText>Enter the approval date as it is written on your ethics approval letter. This date can be used by the Research Office to generate annual and final report reminders.</inlineHelpText>
    <label>Approving Ethics Committee Approval Date</label>
    <type>Date</type>
</CustomField>