force-app/main/default/objects/Ethics_Request__c/fields/I_RS_Approving_Organisation__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Approving_Organisation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the Organisation who provided approval and is listed on your ethics approval letter. The Research Office will complete if the Organisation cannot be found.</inlineHelpText>
    <label>Approving Organisation</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>La Trobe Organisation Unit</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Ethics Requests (Approving Organisation)</relationshipLabel>
    <relationshipName>Ethics_Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>