force-app/main/default/objects/Ethics_Request__c/fields/I_RS_Assigned_Reviewers__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Assigned_Reviewers__c</fullName>
    <description>This field is used to return the values in Reviewers field. This is a workaround to hide/show values in the community page. e.g if the current user in community is included in the Reviewer field, then that user will be able to see the data/ see who are the reviewers, else return the default message.</description>
    <formula>IF($User.I_RS_Is_Researcher_User__c = &quot;1&quot; &amp;&amp; CONTAINS(I_RS_Reviewers__c, $User.FirstName &amp; &quot; &quot; &amp; $User.LastName), I_RS_Reviewers__c, 

IF($User.I_RS_Is_Researcher_User__c = &quot;0&quot;, I_RS_Reviewers__c,

&quot;This field has intentionally been left blank&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned Reviewers</label>
    <type>Text</type>
</CustomField>