force-app/main/default/objects/Ethics_Request__c/fields/I_RS_Attached_File_Names__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Attached_File_Names__c</fullName>
    <description>List of all the Files that are related to this record</description>
    <label>Related File Names</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>