force-app/main/default/objects/Ethics_Request__c/fields/I_RS_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Auto_Number__c</fullName>
    <displayFormat>{YY}{000}</displayFormat>
    <label>Auto Number</label>
    <type>AutoNumber</type>
</CustomField>