force-app/main/default/objects/Ethics_Request__c/fields/I_RS_Chair_Person_Name__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Chair_Person_Name__c</fullName>
    <formula>I_RS_Meeting_Date__r.I_RS_Chair_Person__r.FirstName + &quot; &quot; + I_RS_Meeting_Date__r.I_RS_Chair_Person__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Chair Person Name</label>
    <type>Text</type>
</CustomField>