force-app/main/default/objects/Ethics_Request__c/fields/I_RS_Clinical_Trials__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Clinical_Trials__c</fullName>
    <inlineHelpText>The type of clinical trial classification. This is populated by the Research Office.</inlineHelpText>
    <label>Clinical Trials</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CTN</fullName>
            </value>
            <value>
                <fullName>CTX</fullName>
            </value>
            <value>
                <fullName>Non-drug Clinical Trial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>