force-app/main/default/objects/Ethics_Request__c/fields/I_RS_College__c.field-meta.xml
<CustomField>
    <fullName>I_RS_College__c</fullName>
    <formula>I_RS_Principal_Investigator_Contact__r.I_RS_College__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>College</label>
    <type>Text</type>
</CustomField>