force-app/main/default/objects/Ethics_Request__c/fields/I_RS_Comments__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Comments__c</fullName>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>