force-app/main/default/objects/Ethics_Request__c/fields/I_RS_Conditions_of_Approval__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Conditions_of_Approval__c</fullName>
    <inlineHelpText>The approved research must be conducted within these conditions. Populated by the Research Office.</inlineHelpText>
    <label>Conditions of Approval</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>