force-app/main/default/objects/Ethics_Request__c/fields/I_RS_Content_Owner__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Content_Owner__c</fullName>
    <inlineHelpText>The position responsible for the document. This is populated by the Research Office.</inlineHelpText>
    <label>Content Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>