force-app/main/default/objects/Ethics_Request__c/fields/I_RS_Count_of_Collaborating_Organisation__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Count_of_Collaborating_Organisation__c</fullName>
    <inlineHelpText>This is a count of the number of linked Collaborating Organisations on the ‘other’ tab. This field is automatically calculated.</inlineHelpText>
    <label>Count of Collaborating Organisation/s</label>
    <summaryForeignKey>Collaborating_Organisation__c.I_RS_Ethics_Request__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>