force-app/main/default/objects/Ethics_Request__c/fields/I_RS_Count_of_Parent_Ethics_Low__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Count_of_Parent_Ethics_Low__c</fullName>
    <label>Count of Parent Ethics Low</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>