force-app/main/default/objects/Ethics_Request__c/fields/I_RS_Count_of_Related_Ethics_Application__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Count_of_Related_Ethics_Application__c</fullName>
    <label>Count of Related Ethics Applications</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>