force-app/main/default/objects/Ethics_Request__c/fields/I_RS_CTX__c.field-meta.xml
<CustomField>
    <fullName>I_RS_CTX__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If ticked TGA notification is required. Populated by the Research Office.</inlineHelpText>
    <label>CTX</label>
    <type>Checkbox</type>
</CustomField>