force-app/main/default/objects/Ethics_Request__c/fields/I_RS_Date_Received__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Date_Received__c</fullName>
    <label>Date Received</label>
    <type>Date</type>
</CustomField>