force-app/main/default/objects/Ethics_Request__c/fields/I_RS_Department__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Department__c</fullName>
    <formula>I_RS_Principal_Investigator_Contact__r.I_RS_Department__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Department</label>
    <type>Text</type>
</CustomField>