force-app/main/default/objects/Ethics_Request__c/fields/I_RS_DNIR_DIR_Licence_Number__c.field-meta.xml
<CustomField>
    <fullName>I_RS_DNIR_DIR_Licence_Number__c</fullName>
    <inlineHelpText>If the research project has an OGTR Licence Number, it will be entered here. The Research Office will populate this field.</inlineHelpText>
    <label>DNIR/DIR Licence Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>