force-app/main/default/objects/Ethics_Request__c/fields/I_RS_Document_Author__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Document_Author__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The person responsible for writing the document and can be the same person as the Content Owner. This is populated by the Research Office.</inlineHelpText>
    <label>Document Author</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Ethics Requests (Document Author)</relationshipLabel>
    <relationshipName>Document_Author</relationshipName>
    <type>Lookup</type>
</CustomField>