force-app/main/default/objects/Ethics_Request__c/fields/I_RS_Document_Version__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Document_Version__c</fullName>
    <inlineHelpText>The version number on your document. This is populated by the Research Office.</inlineHelpText>
    <label>Document Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>