force-app/main/default/objects/Ethics_Request__c/fields/I_RS_Dosage_Description_of_Drug_Device__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Dosage_Description_of_Drug_Device__c</fullName>
    <description>Dosage/Description of Drug/Device (if applicable)</description>
    <inlineHelpText>A description of the drug/device dosage. This is populated by the Research Office.</inlineHelpText>
    <label>Dosage/Description of Drug/Device</label>
    <length>255</length>
    <type>Text</type>
</CustomField>