force-app/main/default/objects/Ethics_Request__c/fields/I_RS_Ethics_Application_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Ethics_Application_Approval_Date__c</fullName>
    <inlineHelpText>This is the date the research can start. Populated by the Research Office.</inlineHelpText>
    <label>Ethics Application Approval Date</label>
    <type>Date</type>
</CustomField>