force-app/main/default/objects/Ethics_Request__c/fields/I_RS_Ethics_Application_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Ethics_Application_Expiry_Date__c</fullName>
    <inlineHelpText>This is the date the research must stop. The Research Office will populate this field.</inlineHelpText>
    <label>Ethics Application Expiry Date</label>
    <type>Date</type>
</CustomField>