force-app/main/default/objects/Ethics_Request__c/fields/I_RS_Ethics_Application_Number__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Ethics_Application_Number__c</fullName>
    <inlineHelpText>This number is populated by the Research Office.</inlineHelpText>
    <label>Ethics Application Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>