force-app/main/default/objects/Ethics_Request__c/fields/I_RS_Ethics_Application_Title__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Ethics_Application_Title__c</fullName>
    <inlineHelpText>Write a title for your research  project.</inlineHelpText>
    <label>Ethics Application Title</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>