force-app/main/default/objects/Ethics_Request__c/fields/I_RS_Ethics_Review_Committee__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Ethics_Review_Committee__c</fullName>
    <inlineHelpText>The Committee who will review your ethics requests. Populated by the Research Office</inlineHelpText>
    <label>Ethics Review Committee</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Human Research Ethics Committee (HREC)</fullName>
            </value>
            <value>
                <fullName>Animal Ethics Committee</fullName>
            </value>
            <value>
                <fullName>La Trobe Institutional Biosafety Committee</fullName>
            </value>
            <value>
                <fullName>Low Risk Committee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>