force-app/main/default/objects/Ethics_Request__c/fields/I_RS_Governance_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Governance_Approval_Date__c</fullName>
    <inlineHelpText>This is the date the Research Office completed all governance requirements for your research project. This is populated by the Research Office.</inlineHelpText>
    <label>Governance Approval Date</label>
    <type>Date</type>
</CustomField>