force-app/main/default/objects/Ethics_Request__c/fields/I_RS_IBC_Application_Clearance_Level__c.field-meta.xml
<CustomField>
    <fullName>I_RS_IBC_Application_Clearance_Level__c</fullName>
    <inlineHelpText>Please choose the type of dealing/s. If left blank the Research Office will populate this field.</inlineHelpText>
    <label>IBC Application Clearance Level</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exempt dealing</fullName>
            </value>
            <value>
                <fullName>NLRD</fullName>
            </value>
            <value>
                <fullName>DNIR</fullName>
            </value>
            <value>
                <fullName>DIR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>