force-app/main/default/objects/Ethics_Request__c/fields/I_RS_IBC_Application_Type__c.field-meta.xml
<CustomField>
    <fullName>I_RS_IBC_Application_Type__c</fullName>
    <inlineHelpText>Please choose the highest level of containment required for this research project. If left blank the Research Office will populate this field.</inlineHelpText>
    <label>IBC Application Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PC1</fullName>
            </value>
            <value>
                <fullName>PC2</fullName>
            </value>
            <value>
                <fullName>PC3</fullName>
            </value>
            <value>
                <fullName>DNIR Licence Number</fullName>
            </value>
            <value>
                <fullName>DIR Licence Number</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>