force-app/main/default/objects/Ethics_Request__c/fields/I_RS_IBC_Review_Committee__c.field-meta.xml
<CustomField>
    <fullName>I_RS_IBC_Review_Committee__c</fullName>
    <label>IBC Review Committee</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>La Trobe IBC</fullName>
                <default>true</default>
                <label>La Trobe Institutional Biosafety</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>