force-app/main/default/objects/Ethics_Request__c/fields/I_RS_Invasive_Nature_of_Trial__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Invasive_Nature_of_Trial__c</fullName>
    <inlineHelpText>A brief description of the intervention. This is populated by the Research Office.</inlineHelpText>
    <label>Invasive Nature of Trial</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>