force-app/main/default/objects/Ethics_Request__c/fields/I_RS_Linked_MOUs_CTRAs__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Linked_MOUs_CTRAs__c</fullName>
    <label>Linked MOUs/CTRAs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>