force-app/main/default/objects/Ethics_Request__c/fields/I_RS_Linked_Project__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Linked_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Linked Project [Grant/Contract]</description>
    <label>Linked Project [Grant/Contract]</label>
    <referenceTo>Project_Proposal__c</referenceTo>
    <relationshipLabel>Ethics Requests</relationshipLabel>
    <relationshipName>Ethics_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>