force-app/main/default/objects/Ethics_Request__c/fields/I_RS_Meeting_Comments__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Meeting_Comments__c</fullName>
    <inlineHelpText>The list of actions that need to be addressed before the research is approved. Populated by the Research Office.</inlineHelpText>
    <label>Actions for researchers</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>