force-app/main/default/objects/Ethics_Request__c/fields/I_RS_Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Meeting_Date__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The date the ethics request will be reviewed by the Committee. Populated  by the Research Office.</inlineHelpText>
    <label>Meeting Date</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2 AND 3) OR (4 AND 5 AND 6) OR (7 AND 8 AND 9)</booleanFilter>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Animal Ethics Application, SOP/Phenotype Report, Externally Approved Application</value>
        </filterItems>
        <filterItems>
            <field>Meeting_Date__c.Type__c</field>
            <operation>equals</operation>
            <value>Animal Ethics Application</value>
        </filterItems>
        <filterItems>
            <field>Meeting_Date__c.I_RS_Expired__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Human Ethics Application, Externally Approved Application</value>
        </filterItems>
        <filterItems>
            <field>Meeting_Date__c.Type__c</field>
            <operation>equals</operation>
            <value>Human Ethics Application</value>
        </filterItems>
        <filterItems>
            <field>Meeting_Date__c.I_RS_Expired__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Institutional Biosafety Committee, Externally Approved Application</value>
        </filterItems>
        <filterItems>
            <field>Meeting_Date__c.Type__c</field>
            <operation>equals</operation>
            <value>IBC Ethics Application</value>
        </filterItems>
        <filterItems>
            <field>Meeting_Date__c.I_RS_Expired__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Meeting_Date__c</referenceTo>
    <relationshipLabel>New Applications</relationshipLabel>
    <relationshipName>Ethics_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>