force-app/main/default/objects/Ethics_Request__c/fields/I_RS_Meeting_Date_Calendar_Date__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Meeting_Date_Calendar_Date__c</fullName>
    <formula>(I_RS_Meeting_Date__r.I_RS_Meeting_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Meeting Date Calendar Date</label>
    <type>Date</type>
</CustomField>