force-app/main/default/objects/Ethics_Request__c/fields/I_RS_Milestone_Task_Status__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Milestone_Task_Status__c</fullName>
    <description>Visual component of Milestone traffic light. Used in compact layouts and list views to summarise Ethics Request in terms of its and its Milestones statuses</description>
    <formula>IF(!ISBLANK(I_RS_Traffic_Light_Status__c),

IMAGE(
LEFT($Api.Partner_Server_URL_260,
FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)
)+
&quot;resource/MilestoneTrafficLight_&quot;+I_RS_Traffic_Light_Status__c, I_RS_Traffic_Light_Status__c, 15,15
)

,

&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Milestone Task Status</label>
    <type>Text</type>
</CustomField>