force-app/main/default/objects/Ethics_Request__c/fields/I_RS_Name_of_Drug_Device__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Name_of_Drug_Device__c</fullName>
    <inlineHelpText>A list of name/s of drug and/or devices used in the clinical trial. This is populated by the Research Office.</inlineHelpText>
    <label>Name of Drug/Device</label>
    <length>255</length>
    <type>Text</type>
</CustomField>