force-app/main/default/objects/Ethics_Request__c/fields/I_RS_No_of_General_Correspondence__c.field-meta.xml
<CustomField>
    <fullName>I_RS_No_of_General_Correspondence__c</fullName>
    <label>No. of General Correspondence</label>
    <summaryFilterItems>
        <field>Ethics_Post_Approval__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>General Correspondence</value>
    </summaryFilterItems>
    <summaryForeignKey>Ethics_Post_Approval__c.I_RS_Ethics_Request__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>