force-app/main/default/objects/Ethics_Request__c/fields/I_RS_No_of_Modifications__c.field-meta.xml
<CustomField>
    <fullName>I_RS_No_of_Modifications__c</fullName>
    <label>No. of Modifications</label>
    <summaryFilterItems>
        <field>Ethics_Post_Approval__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Modification</value>
    </summaryFilterItems>
    <summaryForeignKey>Ethics_Post_Approval__c.I_RS_Ethics_Request__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>