force-app/main/default/objects/Ethics_Request__c/fields/I_RS_Non_drug_Clinical_Trial__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Non_drug_Clinical_Trial__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If ticked, TGA approval isn&apos;t required, but the research project is still considered to be a clinical trial. Populated by the Research Office.</inlineHelpText>
    <label>Non-drug Clinical Trial</label>
    <type>Checkbox</type>
</CustomField>