force-app/main/default/objects/Ethics_Request__c/fields/I_RS_Number_of_Review_Times__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Number_of_Review_Times__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The count of times the Ethics Request has been in a period of pending a decision by the review body.</description>
    <inlineHelpText>The number of times the Committee has reviewed the same ethics request. This is automatically calculated.</inlineHelpText>
    <label>Number of Review Times</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>