force-app/main/default/objects/Ethics_Request__c/fields/I_RS_Organisation__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Organisation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organisation</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Ethics Requests</relationshipLabel>
    <relationshipName>Ethics_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>