force-app/main/default/objects/Ethics_Request__c/fields/I_RS_Other__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Other__c</fullName>
    <label>Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>