force-app/main/default/objects/Ethics_Request__c/fields/I_RS_Principal_Investigator__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Principal_Investigator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Principal Investigator (User)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Ethics_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>